<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1F374A"
    tools:context=".model.CadastroActivity">


  <ScrollView
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:fillViewport="true"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


      <TextView
          android:id="@+id/textView4"
          android:layout_width="match_parent"
          android:layout_height="35dp"
          android:layout_marginHorizontal="50dp"
          android:text="@string/_nome"
          android:textColor="@color/white"
          android:textSize="18sp"
          android:textStyle="bold"
          app:layout_constraintBottom_toTopOf="@+id/edtNome"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintVertical_chainStyle="packed" />

      <EditText
          android:id="@+id/edtNome"
          android:layout_width="match_parent"
          android:layout_height="60dp"
          android:layout_marginHorizontal="50dp"
          android:layout_marginTop="08dp"
          android:background="@drawable/backgroud"
          android:drawableStart="@drawable/ic_user_login_on"
          android:drawablePadding="16dp"
          android:hint="@string/informe_seu_nome"
          android:inputType="textCapWords"
          android:padding="16dp"
          android:textColorHint="#8C8585"
          android:textSize="24sp"
          app:layout_constraintBottom_toTopOf="@+id/textView5"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/textView4" />

      <TextView
          android:id="@+id/textView55"
          android:layout_width="match_parent"
          android:layout_height="35dp"
          android:layout_marginHorizontal="50dp"
          android:text="@string/_setor"
          android:layout_marginTop="08dp"
          android:textColor="@color/white"
          android:textSize="18sp"
          android:textStyle="bold"
          android:gravity="center"
          app:layout_constraintBottom_toTopOf="@+id/iputext"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/edtCpf" />

      <com.google.android.material.textfield.TextInputLayout
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
          android:id="@+id/iputext"
          android:layout_width="300dp"
          android:layout_height="wrap_content"
          android:layout_alignParentTop="true"
          android:layout_centerHorizontal="true"
          android:layout_marginTop="08dp"
          android:background="@color/white"
          app:layout_constraintBottom_toTopOf="@+id/btnCriar_conta"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.558"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/textView55">

        <AutoCompleteTextView
          android:id="@+id/autoComp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:inputType="none"
            android:hint="Escolha seu Setor: click aqui."
          android:layout_weight="1"
          android:text=""/>

      </com.google.android.material.textfield.TextInputLayout>

      <TextView
          android:id="@+id/textView5"
          android:layout_width="match_parent"
          android:layout_height="30dp"
          android:layout_marginHorizontal="50dp"
          android:text="@string/cpf"
          android:textStyle="bold"
          android:layout_marginTop="08dp"
          android:textColor="@color/white"
          android:textSize="18sp"
          app:layout_constraintBottom_toTopOf="@+id/edtCpf"
          app:layout_constraintTop_toBottomOf="@+id/edtNome"
          tools:layout_editor_absoluteX="49dp" />


<!--      <com.santalu.maskara.widget.MaskEditText-->
<!--          android:id="@+id/edtCpf"-->
<!--          android:layout_width="match_parent"-->
<!--          android:layout_height="67dp"-->
<!--          app:mask="___.___.___-__"-->
<!--          app:maskCharacter="_"-->
<!--          android:background="@drawable/backgroud"-->
<!--          android:layout_marginHorizontal="50dp"-->
<!--          android:drawableStart="@drawable/ic_setor"-->
<!--          android:drawablePadding="16dp"-->
<!--          android:hint="@string/informe_seu_setor"-->
<!--          android:inputType="number"-->
<!--          android:padding="16dp"-->
<!--          android:textColorHint="#8C8585"-->
<!--          android:textSize="24sp"-->
<!--          app:layout_constraintBottom_toTopOf="@+id/textView55"-->
<!--          app:layout_constraintEnd_toEndOf="parent"-->
<!--          app:layout_constraintStart_toStartOf="parent"-->
<!--          app:layout_constraintTop_toBottomOf="@+id/textView5"-->
<!--          app:maskStyle="completable" />-->

      <EditText
          android:id="@+id/edtCpf"
          android:layout_width="match_parent"
          android:layout_height="67dp"
          android:layout_marginHorizontal="50dp"
          android:background="@drawable/backgroud"
          android:drawableStart="@drawable/ic_setor"
          android:drawablePadding="16dp"
          android:hint="@string/informe_seu_setor"
          android:inputType="number"
          android:padding="16dp"
          android:maxLength="11"
          android:textColorHint="#8C8585"
          android:textSize="24sp"
          app:layout_constraintBottom_toTopOf="@+id/textView55"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/textView5" />
      <android.widget.Button
          android:id="@+id/btnCriar_conta"
          android:layout_width="207dp"
          android:layout_height="59dp"
          android:layout_marginHorizontal="50dp"
          android:background="@drawable/bg_btn"
          android:text="@string/finalizar_cadastro"
          android:layout_marginTop="40dp"
          android:textAllCaps="false"
          android:textColor="@color/white"
          android:textSize="18sp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/iputext" />

      <Button
          android:id="@+id/btnVotar"
          android:layout_width="96dp"
          android:layout_height="38dp"
          android:gravity="right"
          android:text="voltar"
          android:onClick="voltariniciar"
          app:layout_constraintBottom_toTopOf="@+id/textView4"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.034"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintVertical_bias="0.149" />


    </androidx.constraintlayout.widget.ConstraintLayout>


  </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>